plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.11'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Notification
	implementation 'nl.martijndwars:web-push:5.1.1'
	implementation 'org.bouncycastle:bcprov-jdk15on:1.70'

	// Websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// JPA
	implementation "org.mariadb.jdbc:mariadb-java-client:3.4.2"
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// WebMvc
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.15'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-orgjson:0.12.6'

	// OpenApi
	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13")

	// MinIO
	implementation 'io.minio:minio:8.5.17'

	// Video thumbnail
	implementation 'org.jcodec:jcodec:0.2.5'
	implementation 'org.jcodec:jcodec-javase:0.2.5'

	implementation 'io.portone:server-sdk:0.23.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
